@@ -14,11 +14,9 @@ import org.matsim.core.network.io.MatsimNetworkReader;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-import java.util.Random;
+import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class CreateDrtVehicles {
     private final static Logger logger = LogManager.getLogger(CreateDrtVehicles.class);
@@ -30,7 +28,7 @@ public class CreateDrtVehicles {
                 .requireOptions("network-path", "output-vehicles-path", "vehicles-number")
                 .allowOptions("vehicles-capacity", "service-begin-time", "service-end-time", "vehicle-id-prefix")
                 .allowOptions("random-seed")
-                .allowOptions("service-area-path")
+                .allowOptions("service-area-path", "network-modes")
                 .build();
         int vehiclesNumber = Integer.parseInt(cmd.getOptionStrict("vehicles-number"));
         int vehiclesCapacity = cmd.hasOption("vehicles-capacity") ? Integer.parseInt(cmd.getOptionStrict("vehicles-capacity")) : 4;
@@ -39,17 +37,17 @@ public class CreateDrtVehicles {
         long randomSeed = cmd.hasOption("random-seed") ? Long.parseLong(cmd.getOptionStrict("random-seed")) : DEFAULT_RANDOM_SEED;
         String vehicleIdPrefx = cmd.getOption("vehicle-id-prefix").orElse("vehicle_drt_");
         String serviceArea = cmd.getOption("service-area-path").orElse(null);
+        Set<String> networkModes = cmd.hasOption("network-modes") ? Arrays.stream(cmd.getOptionStrict("network-modes").split(",")).map(String::trim).collect(Collectors.toSet()) : Set.of("car");
         Network network = NetworkUtils.createNetwork();
         new MatsimNetworkReader(network).readFile(cmd.getOptionStrict("network-path"));
-        List<Id<Link>> linksIds;
+        Stream<? extends Link> linkStream = network.getLinks().values().stream();
         if(serviceArea != null) {
             ScenarioExtent extent = new ShapeScenarioExtent.Builder(new File(serviceArea), Optional.empty(), Optional.empty()).build();
-            linksIds = network.getLinks().values().stream()
-                    .filter(link -> extent.isInside(link.getFromNode().getCoord()) || extent.isInside(link.getToNode().getCoord()))
-                    .map(Link::getId)
-                    .collect(Collectors.toList());
-        } else {
-            linksIds = new ArrayList<>(network.getLinks().keySet());
+            linkStream = linkStream.filter(link -> extent.isInside(link.getFromNode().getCoord()) || extent.isInside(link.getToNode().getCoord()));
+        }
+        List<Id<Link>> linksIds = linkStream.filter(link -> link.getAllowedModes().stream().anyMatch(networkModes::contains)).map(Link::getId).toList();
+        if(linksIds.size() == 0) {
+            throw new IllegalStateException("No matching links to sample from");
         }
         Random random = new Random(randomSeed);
         FleetSpecification fleetSpecification = new FleetSpecificationImpl();
